--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     packagingOptions {
-    //exclude 'META-INF/*'
+        //exclude 'META-INF/*'
     }
     compileSdkVersion 28
     defaultConfig {
@@ -25,19 +25,21 @@ android {
             targetCompatibility 1.8
         }
     }
-
     flavorDimensions "abi"
-
     productFlavors {
         arm { dimension "abi" }
         aarch64 { dimension "abi" }
     }
-
+    buildToolsVersion '28.0.3'
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    //implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     //implementation 'org.mozilla.components:browser-toolbar:0.51.0'
     //implementation "org.mozilla.components:concept-engine:0.51.0"
