--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,8 @@
     <uses-permission android:name="android.permission.RECORD_AUDIO"/>
     <uses-permission android:name="android.permission.CAMERA"/>
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+    <uses-permission android:name="android.permission.REORDER_TASKS" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -17,7 +19,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar"
         android:windowSoftInputMode="stateUnspecified|adjustResize">
-        <activity android:name=".GeckoViewActivity">
+        <activity
+            android:name=".GeckoViewActivity"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenSize|screenLayout">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -38,17 +42,38 @@
                 <data android:scheme="javascript"/>
             </intent-filter>
         </activity>
+        <activity-alias
+            android:name=".GeckoViewActivity"
+            android:icon="@mipmap/ic_launcher"
+            android:label="@string/app_name"
+            android:targetActivity=".GeckoViewActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="com.lge.intent.category.QSLIDE" />
+            </intent-filter>
+
+            <meta-data
+                android:name="cleartask"
+                android:value="false" />
+            <meta-data
+                android:name="min version"
+                android:value="2.5" />
+        </activity-alias>
+
         <activity
             android:name=".SessionActivity"
             android:label="GeckoView Example"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar"
             android:windowSoftInputMode="stateUnspecified|adjustResize">
         </activity>
+
         <service
             android:name=".ExampleCrashHandler"
             android:exported="false"
             android:process=":crash">
         </service>
+        <service android:name="com.lge.app.floating.FloatingWindowService" />
     </application>
 
 </manifest>
