--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,12 +45,12 @@ dependencies {
     //implementation "org.mozilla.components:concept-engine:0.51.0"
     //implementation "org.mozilla.components:browser-engine-gecko:0.51.0"
     //implementation "org.mozilla.components:feature-prompts:0.51.0"
-    armImplementation "org.mozilla.geckoview:geckoview-nightly-armeabi-v7a:68.0.20190520095418"
-    aarch64Implementation "org.mozilla.geckoview:geckoview-nightly-arm64-v8a:68.0.20190520095418"
+    //armImplementation "org.mozilla.geckoview:geckoview-nightly-armeabi-v7a:68.0.20190520095418"
+    //armImplementation "org.mozilla.geckoview:geckoview-nightly-armeabi-v7a:68.0.20190520095418"
+    //aarch64Implementation "org.mozilla.geckoview:geckoview-nightly-arm64-v8a:68.0.20190527103257"
+    aarch64Implementation "org.mozilla.geckoview:geckoview-nightly-arm64-v8a:69.0.20190528101320"
 
-
-
-    testImplementation 'junit:junit:4.12'
+    //testImplementation 'junit:junit:4.12'
     //androidTestImplementation 'com.android.support.test:runner:1.0.2'
     //androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
